--- a/resume2.html
+++ b/resume2.html
@@ -219,7 +219,7 @@
 <body>
   <div class="resume-container">
     <div class="header">
-      <h1>Kundana Mani</h1>
+      <h1>B.Kundana Mani</h1>
       <p class="subtitle">Computer Science Undergraduate</p>
       <div class="contact-info">
         <p><strong>Email:</strong> kundanamani@gmail.com</p>
